=============

 * Adaptor class has two static utility methods for programmatic invocation of adaptors.
   Simple.java (in example/src/...) demonstrates usage.

3rd Party
=========

 * Upgraded lib/XmlSchema_1.1.jar to lib/XmlSchema_1.4.2.jar.
 
 * Upgraded lib/commons-httpclient_3.0.1.jar to lib/commons-httpclient_3.1.jar.
 
 * Upgraded lib/commons-lang_2.0.jar to lib/commons-lang_2.4.jar.
 
 * Added lib/jaxws-api_2.1-1.jar (required for CXF).
 
 * Added lib/neethi-2.0.4.jar (required for CXF).
  
 * Added lib/cxf-2.1.jar (required for CXF).


=================================================
openadaptor3 production 3.4.1 Release Notes

See licence.txt for Licence information.
=================================================

Date: 17th April 2008
Author: openadaptor Core Team

openadaptor 3.4.1
=======

 Summary
 =======
 
 This release focuses on minor cleanup of the codebase & examples as well as some specific 
 changes as outlined below.
 

Processors
==========

 * Any processor that implements the ILifecycleListener interface will be notified 
   of state changes of its associated Node.
   
 * Added StringSubstitutor processor for escaping illegal XML characters.
 
Spring
======

 * We have upgraded to release 2.5.3 of the Spring Framework.   
  
Miscellaneous
=============

 * Clean up of JUnit tests e.g. warnings (unused imports, non-static references to static 
   fields, etc.) have been tidied.
   
 * Spring XML files with examples config renamed to follow industry standard (lower case,
   hyphen separated).
   
 * Failure to load .openadaptor-spring.xml from classpath is no longer fatal (reduced to warning).   
 
 * Added an ignoreExceptionProcessorErrors flag on the Router class. If set to true and an 
   exceptionProcessor is set on the Adaptor, any exceptions thrown by the exceptionProcessor
   will be logged only (they will not cause the adaptor to shut down).
   