@@ -47,6 +47,8 @@ Miscellaneous
  
  * Upgraded lib/commons-lang_2.0.jar to lib/commons-lang_2.4.jar.
  
+ * Upgraded lib/xfire-all_1.2.3.jar to lib/xfire-all_1.2.6.jar.
+ 
  * Added lib/jaxws-api_2.1-1.jar (required for CXF).
  
  * Added lib/neethi-2.0.4.jar (required for CXF).
